# vst3

./: CMakeLists.txt  README.md  build_script.sh
source/: exampleplugincids.h  exampleplugincontroller.cpp  exampleplugincontroller.h  examplepluginentry.cpp  examplepluginprocessor.cpp  examplepluginprocessor.h
